@@ -37,6 +37,7 @@ Version 2.2.0 - SVN
    (Closes: #1788820).
  - Add some rudimentary tests.
  - Remove websubmitdaemon, submit directly to database (Closes: #1737229).
+ - Add script to restore submission table from SUBMITDIR files.
 
 Version 2.1.1 - SVN
 -------------------
